gatekeeper/templates/k8smaxreplicacount-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8smaxreplicacount
  annotations:
    metadata.gatekeeper.sh/title: "Max Replica Count"
    metadata.gatekeeper.sh/version: 1.0.0
    description: "Restricts the replica count of Deployments to a specified maximum."
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sMaxReplicaCount
      validation:
        openAPIV3Schema:
          type: object
          properties:
            maxReplicas:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8smaxreplicacount

        violation[{"msg": msg}] {
            replicas := input.review.object.spec.replicas
            max_replicas := input.parameters.maxReplicas
            replicas > max_replicas
            msg := sprintf("The deployment replicas count %v exceeds the maximum allowed limit of %v", [replicas, max_replicas])
        }
